--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,12 @@
         android:maxSdkVersion="32" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" 
         android:maxSdkVersion="32" />
+    
+    <!-- Permissions for scheduled tasks -->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
 
     <application
         android:name=".AgentCooperApplication"
@@ -29,6 +35,24 @@
                     <category android:name="android.intent.category.LAUNCHER" />
                 </intent-filter>
             </activity>
+            
+            <!-- Scheduled Task Foreground Service -->
+            <service
+                android:name=".data.service.ScheduledTaskForegroundService"
+                android:enabled="true"
+                android:exported="false"
+                android:foregroundServiceType="dataSync" />
+            
+            <!-- WorkManager -->
+            <provider
+                android:name="androidx.startup.InitializationProvider"
+                android:authorities="${applicationId}.androidx-startup"
+                android:exported="false"
+                tools:node="merge">
+                <meta-data
+                    android:name="androidx.work.WorkManagerInitializer"
+                    android:value="androidx.startup" />
+            </provider>
     </application>
 
 </manifest>
